--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@storybook/addon-essentials": "^8.0.0-rc.0",
     "@storybook/addon-interactions": "^8.0.0-rc.0",
     "@storybook/addon-links": "^8.0.0-rc.0",
-    "@storybook/addon-mdx-gfm": "^8.0.0-rc.0",
     "@storybook/addon-onboarding": "^8.0.0-rc.0",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.1",
     "@storybook/blocks": "^8.0.0-rc.0",
     "@storybook/nextjs": "^8.0.0-rc.0",
     "@storybook/react": "^8.0.0-rc.0",
