--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@storybook/nextjs": "^8.0.0-rc.0",
     "@storybook/react": "^8.0.0-rc.0",
     "@storybook/test": "^8.0.0-rc.0",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -33,8 +34,10 @@
     "eslint-config-next": "14.1.0",
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "storybook": "^8.0.0-rc.0",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
