Button + column + stories improvement

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "prettier.config.js",
-    "tailwind.config.cjs"
+    "tailwind.config.ts"
   ],
   "exclude": ["node_modules"]
 }
