--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.0.0-rc.0",
-    "@storybook/addon-interactions": "^8.0.0-rc.0",
-    "@storybook/addon-links": "^8.0.0-rc.0",
-    "@storybook/addon-onboarding": "^8.0.0-rc.0",
-    "@storybook/addon-webpack5-compiler-swc": "^1.0.1",
-    "@storybook/blocks": "^8.0.0-rc.0",
-    "@storybook/nextjs": "^8.0.0-rc.0",
-    "@storybook/react": "^8.0.0-rc.0",
-    "@storybook/test": "^8.0.0-rc.0",
+    "@storybook/addon-essentials": "^8.0.0",
+    "@storybook/addon-interactions": "^8.0.0",
+    "@storybook/addon-links": "^8.0.0",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
+    "@storybook/blocks": "^8.0.0",
+    "@storybook/nextjs": "^8.0.0",
+    "@storybook/react": "^8.0.0",
+    "@storybook/test": "^8.0.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -36,7 +35,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "storybook": "^8.0.0-rc.0",
+    "storybook": "^8.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
