--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "storybook": "^8.0.0",
+    "storybook-addon-deep-controls": "^0.6.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
