--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.0.4",
-    "@storybook/addon-interactions": "^8.0.4",
-    "@storybook/addon-links": "^8.0.4",
+    "@chromatic-com/storybook": "^1.3.3",
+    "@storybook/addon-essentials": "^8.0.9",
+    "@storybook/addon-interactions": "^8.0.9",
+    "@storybook/addon-links": "^8.0.9",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
-    "@storybook/blocks": "^8.0.4",
-    "@storybook/nextjs": "^8.0.4",
-    "@storybook/react": "^8.0.4",
-    "@storybook/test": "^8.0.4",
+    "@storybook/blocks": "^8.0.9",
+    "@storybook/nextjs": "^8.0.9",
+    "@storybook/react": "^8.0.9",
+    "@storybook/test": "^8.0.9",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -38,8 +39,8 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "storybook": "^8.0.4",
-    "storybook-addon-deep-controls": "^0.6.1",
+    "storybook": "^8.0.9",
+    "storybook-addon-deep-controls": "^0.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
