--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@uidotdev/usehooks": "^2.4.1",
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
@@ -19,15 +20,14 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.3.3",
-    "@storybook/addon-essentials": "^8.0.9",
-    "@storybook/addon-interactions": "^8.0.9",
-    "@storybook/addon-links": "^8.0.9",
+    "@storybook/addon-essentials": "^8.0.10",
+    "@storybook/addon-interactions": "^8.0.10",
+    "@storybook/addon-links": "^8.0.10",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
-    "@storybook/blocks": "^8.0.9",
-    "@storybook/nextjs": "^8.0.9",
-    "@storybook/react": "^8.0.9",
-    "@storybook/test": "^8.0.9",
+    "@storybook/blocks": "^8.0.10",
+    "@storybook/nextjs": "^8.0.10",
+    "@storybook/react": "^8.0.10",
+    "@storybook/test": "^8.0.10",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -39,7 +39,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "storybook": "^8.0.9",
+    "storybook": "^8.0.10",
     "storybook-addon-deep-controls": "^0.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
