--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@million/lint": "^1.0.0-rc.1",
     "@uidotdev/usehooks": "^2.4.1",
     "clsx": "^2.1.0",
+    "million": "^3.1.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -20,14 +22,14 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^8.1.1",
-    "@storybook/addon-interactions": "^8.1.1",
-    "@storybook/addon-links": "^8.1.1",
+    "@storybook/addon-essentials": "^8.1.2",
+    "@storybook/addon-interactions": "^8.1.2",
+    "@storybook/addon-links": "^8.1.2",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
-    "@storybook/blocks": "^8.1.1",
-    "@storybook/nextjs": "^8.1.1",
-    "@storybook/react": "^8.1.1",
-    "@storybook/test": "^8.1.1",
+    "@storybook/blocks": "^8.1.2",
+    "@storybook/nextjs": "^8.1.2",
+    "@storybook/react": "^8.1.2",
+    "@storybook/test": "^8.1.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -39,7 +41,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "storybook": "^8.1.1",
+    "storybook": "^8.1.2",
     "storybook-addon-deep-controls": "^0.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
